Prevent the selection handle to bet cut off by the toolbar
See https://www.woltlab.com/community/thread/300628-widget-handle-cut-off-by-the-editor-toolbar/

--- a/wcfsetup/install/files/style/ui/ckeditor.scss
+++ b/wcfsetup/install/files/style/ui/ckeditor.scss
@@ -7,6 +7,10 @@
 	@extend .htmlContent;
 }
 
+.ck.ck-content.ck-editor__editable > .ck-widget.ck-widget_with-selection-handle:first-child {
+	margin-top: 1.5em !important;
+}
+
 .ck.ck-content.ck-editor__editable .image-inline {
 	vertical-align: middle;
 }
